# maiauth

./: CMakeLists.txt  Dockerfile
src/: main.cpp
